# anya-rs

./: .gitignore  Cargo.toml  README.md  napcat.yaml
anya/: Cargo.toml
anya/src/: main.rs
crates/forger/: Cargo.toml
crates/forger-discord/: Cargo.toml
crates/forger-discord/src/: adapter.rs  config.rs  lib.rs
crates/forger-napcat/: Cargo.toml
crates/forger-napcat/src/: actions.rs  adapter.rs  bot.rs  config.rs  events.rs  lib.rs  models.rs
crates/forger/src/: config.rs  lib.rs
