[package]
name = "anya"
version = "0.1.0"
edition = "2024"

[dependencies]
forger = { path = "../crates/forger" }
forger-napcat = { path = "../crates/forger-napcat" }
tokio = { workspace = true }
bevy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { workspace = true }
