[package]
name = "forger-discord"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
bevy = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
forger = { path = "../forger" }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }
bitflags = { workspace = true }
chrono = { workspace = true }
twilight-gateway = "0.17.1"
twilight-model = "0.17.1"
twilight-http = "0.17.1"
