[package]
name = "forger-napcat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
bevy = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
forger = { path = "../forger" }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
